--- a/lab4_iNat.Rmd
+++ b/lab4_iNat.Rmd
@@ -7,13 +7,15 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+
+options(scipen = 20)
 ```
 
 # Data Setup
 
 ```{r}
 librarian::shelf(
-  digest, dplyr, DT, glue, purrr, readr, stringr, tidyr)
+  digest, dplyr, DT, glue, purrr, readr, stringr, tidyr, here, keras, tensorflow, reticulate)
 
 # path to folder containing species directories of images
 dir_src  <- "/courses/EDS232/inaturalist-2021/train_mini"
@@ -46,7 +48,7 @@ i2 <- i10[1:2]
 basename(dirs_spp)[i2]
 ```
 
-```{r}
+```{r, eval=FALSE}
 # setup data frame with source (src) and destination (dest) paths to images
 idata <- tibble(
   set     = c(rep("spp2", 2), rep("spp10", 10)),
@@ -108,23 +110,163 @@ tensor_gen <- function(img_subset) {
 }
 ```
 
+Manually:
+
+```{r}
+# filepath labels
+train_dir = here("inat/spp2/train")
+test_dir = here("inat/spp2/test")
+validation_dir = here("inat/spp2/validation")
+train10_dir = here("inat/spp10/train")
+test10_dir = here("inat/spp10/test")
+validation10_dir = here("inat/spp10/validation")
+
+# Resize images for binary classification
+datagen <- image_data_generator(rescale = 1/255)
+
+# Avoid overfitting
+train_datagen <- image_data_generator(
+  rescale = 1/255,
+  rotation_range = 40,
+  width_shift_range = 0.2,
+  height_shift_range = 0.2,
+  shear_range = 0.2,
+  zoom_range = 0.2,
+  horizontal_flip = TRUE,
+  fill_mode = "nearest"
+)
+
+train_generator <- flow_images_from_directory(
+  train_dir,
+  train_datagen,
+  target_size = c(150, 150),
+  batch_size = 30,
+  class_mode = "binary"
+)
+
+test_generator <- flow_images_from_directory(
+  test_dir,
+  datagen,
+  target_size = c(150, 150),
+  batch_size = 10,
+  class_mode = "binary"
+)
+
+val_generator <- flow_images_from_directory(
+  validation_dir,
+  datagen,
+  target_size = c(150, 150),
+  batch_size = 10,
+  class_mode = "binary"
+)
+```
 
 # Binary Neural Net
 
 ```{r}
+nn_model <- keras_model_sequential() %>% 
+  layer_dense(units = 16, activation = "relu", input_shape = c(150,150,3)) %>% 
+  layer_dense(units = 16, activation = "relu") %>% 
+  layer_flatten() %>%
+  layer_dense(units =  1, activation = "sigmoid")
+```
 
+```{r}
+nn_model %>% compile(
+  optimizer = "rmsprop",
+  loss      = "binary_crossentropy",
+  metrics   = c("accuracy"))
+```
+
+```{r}
+nn_history <- nn_model %>% fit(
+  train_generator,
+  steps_per_epoch = 1,
+  epochs = 30,
+  validation_data = val_generator,
+  validation_steps = 1
+)
+```
+
+```{r}
+plot(nn_history)
+
+nn_model %>% predict(test_generator)
 ```
 
 # Binary Convolutional Neural Net
 
 ```{r}
+conv_model <- keras_model_sequential() %>%
+layer_conv_2d(filters = 32, kernel_size = c(3, 3), activation = "relu",
+input_shape = c(150, 150, 3)) %>%
+layer_max_pooling_2d(pool_size = c(2, 2)) %>%
+layer_conv_2d(filters = 64, kernel_size = c(3, 3), activation = "relu") %>% layer_max_pooling_2d(pool_size = c(2, 2)) %>%
+layer_conv_2d(filters = 128, kernel_size = c(3, 3), activation = "relu") %>% layer_max_pooling_2d(pool_size = c(2, 2)) %>%
+layer_conv_2d(filters = 128, kernel_size = c(3, 3), activation = "relu") %>% layer_max_pooling_2d(pool_size = c(2, 2)) %>%
+layer_flatten() %>%
+layer_dense(units = 512, activation = "relu") %>%
+layer_dense(units = 1, activation = "sigmoid")
+```
 
+```{r}
+conv_model %>% compile(
+  loss = "binary_crossentropy",
+  optimizer = "rmsprop",
+  metrics = c("acc")
+)
+```
+
+```{r}
+c_history <- conv_model %>% fit(
+  train_generator,
+  steps_per_epoch = 1,
+  epochs = 30,
+  validation_data = val_generator,
+  validation_steps = 1
+)
+```
+
+```{r}
+plot(c_history)
+
+conv_model %>% predict(test_generator)
 ```
 
 # Multiclass Neural Net
 
 ```{r}
+train10_generator <- flow_images_from_directory(
+  train10_dir,
+  train_datagen,
+  target_size = c(150, 150),
+  batch_size = 30,
+  class_mode = "binary"
+)
 
+test10_generator <- flow_images_from_directory(
+  test10_dir,
+  datagen,
+  target_size = c(150, 150),
+  batch_size = 10,
+  class_mode = "binary"
+)
+
+val10_generator <- flow_images_from_directory(
+  validation10_dir,
+  datagen,
+  target_size = c(150, 150),
+  batch_size = 10,
+  class_mode = "binary"
+)
+```
+
+
+```{r}
+model <- keras_model_sequential() %>% 
+  layer_dense(units = 64, activation = "relu", input_shape = c(150,150,3)) %>% 
+  layer_dense(units = 64, activation = "relu") %>% 
+  layer_dense(units = 46, activation = "softmax")
 ```
 
 # Multiclass Convolutional Neural Net
